samples/_failures_safe/1761159136_3be10f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8e1c553.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_d8e1c553.c:167:24: error: expected identifier or ‘(’ at end of input
  167 |                 struct Graph
      |                        ^~~~~
./samples/SAFE/__tmp_d8e1c553.c:167:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d8e1c553.c:167:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d8e1c553.c:167:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d8e1c553.c:167:24: error: expected declaration or statement at end of input
